# fp-crawler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-catalogs.yml
catalogs/: albania.json  algeria.json  andorra.json  antigua-and-barbuda.json  argentina.json  armenia.json  australia.json  austria.json  availability.json  azerbaijan.json  bahamas.json  bahrain.json  bangladesh.json  barbados.json  belarus.json  belgium.json  belize.json  bolivia.json  bosnia-and-herzegovina.json  botswana.json  brazil.json  bulgaria.json  burkina-faso.json  cambodia.json  canada.json  cape-verde.json  chile.json  colombia.json  costa-rica.json  croatia.json  cyprus.json  czech-republic.json  denmark.json  dominica.json  dominican-republic.json  ecuador.json  egypt.json  estonia.json  fiji.json  finland.json  (+110 more)
flixpatrol_scraper/: __init__.py  __main__.py  http_client.py  rate_limit.py  regions.py  scraper.py  tmdb.py
scripts/: build_availability.py  update_catalogs.py
